fix cell misalignment

--- a/dashboard/src/components/TableContainer.css
+++ b/dashboard/src/components/TableContainer.css
@@ -34,6 +34,8 @@ td {
     padding-bottom: var(--padding);
     padding-left: var(--padding-small);
     padding-right: var(--padding-small);
+
+    align-self: center !important;
 }
 
 tbody tr:hover {
